--- a/Dominos/index.html
+++ b/Dominos/index.html
@@ -211,5 +211,5 @@ E-Gift Vouchers
     </div>
 </div>
 <footer>All Rights Reserved. Copyright © Jubilant FoodWorks Ltd.</footer>
-</body>
+Dominos</body>
 </html>
