--- a/index.html
+++ b/index.html
@@ -211,5 +211,6 @@ E-Gift Vouchers
     </div>
 </div>
 <footer>All Rights Reserved. Copyright © Jubilant FoodWorks Ltd.</footer>
-Dominos</body>
+</body>
+<div class="chat"></div>
 </html>
